--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -21,14 +21,13 @@ add_subdirectory(${CMAKE_CURRENT_BINARY_DIR}/googletest-src
                  ${CMAKE_CURRENT_BINARY_DIR}/googletest-build
                  EXCLUDE_FROM_ALL)
 add_executable(
-    stack test_main.cc
+    unit_tests main.cc test_template_class.cc test_template_function.cc
 )
 
 target_link_libraries(
-    stack 
-    gtest_main
+    unit_tests  gtest_main
 )
 
 target_include_directories(
-    stack PRIVATE ${CMAKE_SOURCE_DIR}/template/include
+    unit_tests PRIVATE ${CMAKE_SOURCE_DIR}/template/include
 )
