--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -16,18 +16,20 @@ if(result)
     message(FATAL_ERROR "CMake step for build google-test failed: ${result}")
 endif()
 
+#add sub google_test dir
 set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
 add_subdirectory(${CMAKE_CURRENT_BINARY_DIR}/googletest-src
                  ${CMAKE_CURRENT_BINARY_DIR}/googletest-build
                  EXCLUDE_FROM_ALL)
+
 file(GLOB TEST_SRC *.cc)
+#generate executable
 add_executable(
     unit_tests ${TEST_SRC} ${TEMPLATE_SRC}
 )
 target_link_libraries(
     unit_tests  gtest_main
 )
-
 target_include_directories(
     unit_tests PUBLIC ${CMAKE_SOURCE_DIR}/template/include
 )
