--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,5 @@ project(Template_Test)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 file(GLOB STRUCT_SRC struct_define/src/*.cc)
+message(${CMAKE_CXX_COMPILE_FEATURES})
 add_subdirectory(test)
