--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,9 @@
-cmake_minimum_required(VERSION 3.10)
+cmake_minimum_required(VERSION 3.17)
 project(Template_Test)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
-file(GLOB STRUCT_SRC struct_define/src/*.cc)
-message(${CMAKE_CXX_COMPILE_FEATURES})
+
+add_subdirectory(third_part/googletest)
 add_subdirectory(test)
+add_subdirectory(struct)
